@@ -1,14 +1,5 @@
 package com.ibotta.anagram.rest;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-
-import java.util.List;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.ibotta.anagram.AnagramApplication;
 import com.ibotta.anagram.domain.AnagramDigest;
@@ -26,6 +17,13 @@ import org.springframework.context.annotation.ComponentScan;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
+
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 
 @WebMvcTest(AnagramController.class)
@@ -78,7 +76,7 @@ public class AnagramControllerTest {
         final var actual = new ObjectMapper().readValue(json, AnagramDigest.class);
 
         assertEquals(1, actual.getAnagrams().size());
-        assertEquals(anagrams.get(0), actual.getAnagrams().get(0));
+        assertEquals(anagrams.getFirst(), actual.getAnagrams().getFirst());
     }
 
     @Test
